--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -2,10 +2,392 @@
   "dashboard": "Dashboard",
   "team": "Team",
   "projects": "Projects",
+  "chatLabel": "Chat",
   "chat": "Chat",
   "schedule": "Schedule",
   "docs": "Documents",
-  "settings": "Settings",
+  "settingsLabel": "Settings",
+  "settings": {
+    "title": "Settings",
+    "description": "Manage your account settings and preferences",
+    "profileTab": "Profile",
+    "appTab": "App",
+    "notificationsTab": "Notifications",
+    "securityTab": "Security",
+    "privacyTab": "Privacy",
+    "accessibilityTab": "Accessibility",
+    "exportData": "Export Data",
+    "exportDescription": "Export your data for backup or transfer",
+    "saveSuccess": "Settings saved successfully",
+    "saveError": "Failed to save settings",
+    "loadError": "Failed to load settings",
+    "exportSuccess": "Data exported successfully",
+    "exportError": "Failed to export data",
+    "profile": {
+      "title": "Profile Information",
+      "name": "Full Name",
+      "nameRequired": "Please enter your name",
+      "namePlaceholder": "Enter your full name",
+      "email": "Email",
+      "emailRequired": "Please enter your email",
+      "emailInvalid": "Please enter a valid email",
+      "emailPlaceholder": "Enter your email",
+      "phone": "Phone Number",
+      "phonePlaceholder": "Enter your phone number",
+      "birthDate": "Birth Date",
+      "birthDatePlaceholder": "Select birth date",
+      "gender": "Gender",
+      "male": "Male",
+      "female": "Female",
+      "other": "Other",
+      "location": "Location",
+      "locationPlaceholder": "Enter your location",
+      "bio": "Bio",
+      "bioPlaceholder": "Tell us about yourself",
+      "uploadAvatar": "Upload Avatar",
+      "saveSuccess": "Profile updated successfully",
+      "saveError": "Failed to update profile"
+    },
+    "app": {
+      "title": "Application Settings",
+      "language": "Language",
+      "languageRequired": "Please select a language",
+      "languagePlaceholder": "Select language",
+      "timezone": "Timezone",
+      "timezoneRequired": "Please select a timezone",
+      "timezonePlaceholder": "Select timezone",
+      "appearance": "Appearance",
+      "theme": "Theme",
+      "themeRequired": "Please select a theme",
+      "themePlaceholder": "Select theme",
+      "lightTheme": "Light",
+      "darkTheme": "Dark",
+      "autoTheme": "Auto (System)",
+      "layout": "Layout",
+      "layoutRequired": "Please select a layout",
+      "layoutPlaceholder": "Select layout",
+      "comfortable": "Comfortable",
+      "compact": "Compact",
+      "sidebarCollapsed": "Sidebar Collapsed",
+      "sidebarCollapsedDesc": "Start with sidebar collapsed",
+      "dashboardWidgets": "Dashboard Widgets",
+      "shortcuts": "Keyboard Shortcuts",
+      "saveSuccess": "App settings saved successfully",
+      "saveError": "Failed to save app settings",
+      "resetSuccess": "Settings reset to default",
+      "resetError": "Failed to reset settings",
+      "interface": "Interface",
+      "yes": "Yes",
+      "no": "No",
+      "showAnimations": "Show Animations",
+      "showAnimationsDesc": "Enable animations and transitions",
+      "soundEnabled": "Sound Notifications",
+      "soundEnabledDesc": "Play sounds for notifications",
+      "desktopNotifications": "Desktop Notifications",
+      "desktopNotificationsDesc": "Show desktop notifications",
+      "data": "Data & Privacy",
+      "autoSave": "Auto Save",
+      "autoSaveDesc": "Automatically save your work",
+      "analyticsEnabled": "Analytics & Usage Data",
+      "analyticsEnabledDesc": "Collect usage data to improve the app",
+      "reset": "Reset to Default",
+      "compact": "Compact",
+      "comfortable": "Comfortable",
+      "spacious": "Spacious"
+    },
+    "notifications": {
+      "title": "Notification Preferences",
+      "emailNotifications": "Email Notifications",
+      "pushNotifications": "Push Notifications",
+      "smsNotifications": "SMS Notifications",
+      "inAppNotifications": "In-App Notifications",
+      "projectUpdates": "Project Updates",
+      "taskAssignments": "Task Assignments",
+      "deadlineReminders": "Deadline Reminders",
+      "teamMessages": "Team Messages",
+      "systemAlerts": "System Alerts",
+      "weeklyDigest": "Weekly Digest",
+      "marketingEmails": "Marketing Emails",
+      "newsletter": "Newsletter",
+      "enabled": "Enabled",
+      "disabled": "Disabled",
+      "immediate": "Immediate",
+      "daily": "Daily",
+      "weekly": "Weekly",
+      "saveSuccess": "Notification settings saved successfully",
+      "saveError": "Failed to save notification settings",
+      "general": "General Notifications",
+      "generalTitle": "General",
+      "generalDesc": "System updates, announcements, and general information",
+      "project": "Project Notifications",
+      "projectsTitle": "Projects",
+      "projectsDesc": "Project updates, milestones, and team changes",
+      "task": "Task Notifications",
+      "tasksTitle": "Tasks",
+      "tasksDesc": "Task assignments, deadlines, and status changes",
+      "chat": "Chat Notifications",
+      "chatTitle": "Chat",
+      "chatDesc": "New messages, mentions, and chat activities",
+      "meeting": "Meeting Notifications",
+      "meetingsTitle": "Meetings",
+      "meetingsDesc": "Meeting reminders, schedule changes, and updates",
+      "channels": "Channels",
+      "selectChannels": "Select channels",
+      "email": "Email",
+      "inApp": "In-App",
+      "push": "Push",
+      "sms": "SMS",
+      "frequency": "Frequency",
+      "selectFrequency": "Select frequency",
+      "immediate": "Immediate",
+      "hourly": "Hourly",
+      "daily": "Daily",
+      "weekly": "Weekly",
+      "quietHours": "Quiet Hours",
+      "quietHoursEnabled": "Enable Quiet Hours",
+      "quietStart": "Start Time",
+      "quietEnd": "End Time"
+    },
+    "security": {
+      "title": "Security Settings",
+      "password": "Password",
+      "currentPassword": "Current Password",
+      "currentPasswordRequired": "Please enter your current password",
+      "currentPasswordPlaceholder": "Enter current password",
+      "newPassword": "New Password",
+      "newPasswordRequired": "Please enter a new password",
+      "newPasswordPlaceholder": "Enter new password",
+      "confirmPassword": "Confirm Password",
+      "confirmPasswordRequired": "Please confirm your new password",
+      "confirmPasswordPlaceholder": "Confirm new password",
+      "passwordMismatch": "Passwords do not match",
+      "passwordMinLength": "Password must be at least 8 characters",
+      "passwordStrength": "Password Strength",
+      "weak": "Weak",
+      "medium": "Medium",
+      "strong": "Strong",
+      "twoFactorAuth": "Two-Factor Authentication",
+      "twoFactorEnabled": "Two-factor authentication is enabled",
+      "twoFactorDisabled": "Two-factor authentication is disabled",
+      "enableTwoFactor": "Enable Two-Factor Authentication",
+      "disableTwoFactor": "Disable Two-Factor Authentication",
+      "setupTwoFactor": "Set up Two-Factor Authentication",
+      "backupCodes": "Backup Codes",
+      "generateBackupCodes": "Generate Backup Codes",
+      "loginHistory": "Login History",
+      "trustedDevices": "Trusted Devices",
+      "revokeDevice": "Revoke Device",
+      "revokeAllDevices": "Revoke All Devices",
+      "sessionTimeout": "Session Timeout",
+      "sessionTimeoutDesc": "Automatically log out after inactivity",
+      "saveSuccess": "Security settings saved successfully",
+      "saveError": "Failed to save security settings",
+      "password": "Password",
+      "passwordDesc": "Change your account password to keep your account secure.",
+      "changePassword": "Change Password",
+      "currentPassword": "Current Password",
+      "currentPasswordRequired": "Please enter your current password",
+      "currentPasswordPlaceholder": "Enter current password",
+      "newPassword": "New Password",
+      "newPasswordRequired": "Please enter new password",
+      "passwordMinLength": "Password must be at least 8 characters",
+      "passwordPattern": "Password must contain uppercase, lowercase and number",
+      "newPasswordPlaceholder": "Enter new password",
+      "confirmPassword": "Confirm Password",
+      "confirmPasswordRequired": "Please confirm your password",
+      "passwordMismatch": "Passwords do not match",
+      "confirmPasswordPlaceholder": "Confirm new password",
+      "twoFactor": "Two-Factor Authentication",
+      "twoFactorTitle": "Two-Factor Authentication",
+      "twoFactorDesc": "Add an extra layer of security to your account by enabling two-factor authentication.",
+      "enableTwoFactor": "Enable Two-Factor Authentication",
+
+      "loginHistory": "Login History",
+      "successful": "Successful",
+      "failed": "Failed",
+      "trustedDevices": "Trusted Devices",
+      "remove": "Remove",
+      "trusted": "Trusted",
+      "lastUsed": "Last used"
+    },
+    "privacy": {
+      "title": "Privacy Settings",
+      "privacyNotice": "Privacy Notice",
+      "privacyNoticeDesc": "We respect your privacy and are committed to protecting your personal data. These settings help you control how your information is shared and used.",
+      "profilePrivacy": "Profile Privacy",
+      "profileVisibility": "Profile Visibility",
+      "profileVisibilityRequired": "Please select profile visibility",
+      "selectProfileVisibility": "Select who can see your profile",
+      "public": "Public - Anyone can see",
+      "team": "Team - Only team members",
+      "private": "Private - Only you",
+      "activityStatus": "Activity Status",
+      "activityStatusRequired": "Please select activity status visibility",
+      "selectActivityStatus": "Select who can see your activity status",
+      "dataAnalytics": "Data & Analytics",
+      "analyticsTracking": "Analytics Tracking",
+      "analyticsTrackingDesc": "Help us improve by allowing anonymous usage analytics",
+      "dataSharing": "Data Sharing",
+      "dataSharingDesc": "Allow sharing of anonymized data for research",
+      "thirdPartySharing": "Third-Party Sharing",
+      "thirdPartySharingDesc": "Allow sharing data with trusted third-party services",
+      "locationSharing": "Location Sharing",
+      "locationSharingDesc": "Share your location for location-based features",
+      "dataRetention": "Data Retention Period",
+      "dataRetentionRequired": "Please select data retention period",
+      "selectDataRetention": "Select how long to keep your data",
+      "30Days": "30 Days",
+      "90Days": "90 Days",
+      "6Months": "6 Months",
+      "1Year": "1 Year",
+      "indefinite": "Indefinite",
+      "communication": "Communication Preferences",
+      "marketingEmails": "Marketing Emails",
+      "marketingEmailsDesc": "Receive promotional emails and offers",
+      "contactVisibility": "Contact Information Visibility",
+      "contactVisibilityRequired": "Please select contact visibility",
+      "selectContactVisibility": "Select who can see your contact information",
+      "searchVisibility": "Search Visibility",
+      "searchVisibilityRequired": "Please select search visibility",
+      "selectSearchVisibility": "Select who can find you in search",
+      "saveSuccess": "Privacy settings saved successfully",
+      "saveError": "Failed to save privacy settings",
+      "profilePrivacy": "Profile Privacy",
+      "profileVisibility": "Profile Visibility",
+      "profileVisibilityRequired": "Please select profile visibility",
+      "selectProfileVisibility": "Select who can see your profile",
+      "public": "Public - Anyone can see",
+      "team": "Team - Only team members",
+      "private": "Private - Only you",
+      "activityStatus": "Activity Status",
+      "activityStatusRequired": "Please select activity status visibility",
+      "selectActivityStatus": "Select who can see your activity status",
+      "contactVisibility": "Contact Information",
+      "contactVisibilityRequired": "Please select contact visibility",
+      "selectContactVisibility": "Select who can see your contact info",
+      "searchVisibility": "Search Visibility",
+      "searchVisibilityRequired": "Please select search visibility",
+      "selectSearchVisibility": "Select who can find you in search",
+      "dataAnalytics": "Data & Analytics",
+      "analyticsTracking": "Analytics Tracking",
+      "analyticsTrackingDesc": "Help us improve by allowing anonymous usage analytics",
+      "dataSharing": "Data Sharing",
+      "dataSharingDesc": "Allow sharing of anonymized data for research",
+      "thirdPartySharing": "Third-Party Sharing",
+      "thirdPartySharingDesc": "Allow sharing data with trusted third-party services",
+      "locationSharing": "Location Sharing",
+      "locationSharingDesc": "Share your location for location-based features",
+      "dataRetention": "Data Retention Period",
+      "dataRetentionRequired": "Please select data retention period",
+      "selectDataRetention": "Select how long to keep your data",
+      "30Days": "30 Days",
+      "90Days": "90 Days",
+      "6Months": "6 Months",
+      "1Year": "1 Year",
+      "indefinite": "Indefinite",
+      "communication": "Communication Preferences",
+      "marketingEmails": "Marketing Emails",
+      "marketingEmailsDesc": "Receive promotional emails and newsletters"
+    },
+    "accessibility": {
+      "title": "Accessibility Settings",
+      "accessibilityNotice": "Accessibility Notice",
+      "accessibilityNoticeDesc": "We are committed to making our platform accessible to everyone. These settings help customize your experience based on your needs.",
+      "visual": "Visual Accessibility",
+      "fontSize": "Font Size",
+      "fontSizeDesc": "Adjust the size of text throughout the application",
+      "lineSpacing": "Line Spacing",
+      "lineSpacingDesc": "Adjust the spacing between lines of text",
+      "colorContrast": "Color Contrast",
+      "colorContrastDesc": "Increase contrast for better readability",
+      "highContrast": "High Contrast",
+      "highContrastDesc": "Use high contrast colors",
+      "reducedMotion": "Reduced Motion",
+      "reducedMotionDesc": "Reduce animations and transitions",
+      "focusIndicators": "Focus Indicators",
+      "focusIndicatorsDesc": "Show clear focus indicators for keyboard navigation",
+      "audio": "Audio Accessibility",
+      "soundNotifications": "Sound Notifications",
+      "soundNotificationsDesc": "Play sounds for notifications",
+      "screenReader": "Screen Reader Support",
+      "screenReaderDesc": "Optimize for screen reader compatibility",
+      "keyboard": "Keyboard Navigation",
+      "keyboardShortcuts": "Keyboard Shortcuts",
+      "keyboardShortcutsDesc": "Enable keyboard shortcuts for common actions",
+      "tabNavigation": "Tab Navigation",
+      "tabNavigationDesc": "Improve tab key navigation",
+      "cognitive": "Cognitive Accessibility",
+      "simplifiedInterface": "Simplified Interface",
+      "simplifiedInterfaceDesc": "Show a simplified version of the interface",
+      "autoSave": "Auto Save",
+      "autoSaveDesc": "Automatically save your work",
+      "confirmationDialogs": "Confirmation Dialogs",
+      "confirmationDialogsDesc": "Show confirmation dialogs for important actions",
+      "saveSuccess": "Accessibility settings saved successfully",
+      "saveError": "Failed to save accessibility settings",
+      "motion": "Motion & Animation",
+      "reduceMotion": "Reduce Motion",
+      "reduceMotionDesc": "Reduce or eliminate animations and transitions",
+      "autoPlayMedia": "Auto-play Media",
+      "autoPlayMediaDesc": "Automatically play videos and audio",
+      "navigation": "Navigation & Interaction",
+      "keyboardNavigation": "Keyboard Navigation",
+      "keyboardNavigationDesc": "Enable full keyboard navigation support",
+      "simplifiedLayout": "Simplified Layout",
+      "simplifiedLayoutDesc": "Use a simplified, distraction-free layout",
+      "notifications": "Notifications",
+      "visualNotifications": "Visual Notifications",
+      "visualNotificationsDesc": "Show visual indicators for notifications",
+      "fontSizeRequired": "Please select font size",
+      "selectFontSize": "Select font size",
+      "small": "Small",
+      "medium": "Medium",
+      "large": "Large",
+      "extraLarge": "Extra Large",
+      "tight": "Tight",
+      "normal": "Normal",
+      "loose": "Loose",
+      "veryLoose": "Very Loose",
+      "colorBlindFriendly": "Color Blind Friendly",
+      "colorBlindFriendlyDesc": "Use color blind friendly color schemes"
+    },
+    "dataManagement": {
+      "title": "Data Management",
+      "warning": "Data Management Warning",
+      "warningDesc": "Be careful with data management operations. Exporting and importing data can affect your account settings and preferences.",
+      "export": "Export Data",
+      "exportDesc": "Download a copy of your data for backup or transfer to another account.",
+      "exportButton": "Export Data",
+      "import": "Import Data",
+      "importDesc": "Import data from a previously exported file. This will overwrite your current settings.",
+      "importButton": "Import Data",
+      "dangerZone": "Danger Zone",
+      "deleteAccountDesc": "Permanently delete your account and all associated data. This action cannot be undone.",
+      "deleteAccount": "Delete Account"
+    },
+    "importSuccess": "Data imported successfully",
+    "importError": "Failed to import data",
+    "deleteAccountWarning": "Account deletion is not implemented yet",
+    "accountInfo": {
+      "title": "Account Information",
+      "email": "Email",
+      "verified": "Verified",
+      "memberSince": "Member Since",
+      "lastLogin": "Last Login",
+      "twoFactor": "Two-Factor Auth",
+      "accountId": "Account ID",
+      "roles": {
+        "admin": "Administrator",
+        "manager": "Manager",
+        "member": "Member"
+      },
+      "status": {
+        "active": "Active",
+        "inactive": "Inactive",
+        "pending": "Pending"
+      }
+    }
+  },
   "project": "Project",
   "uploader": "Uploader",
   "uploadDate": "Date",
@@ -1110,7 +1492,6 @@
       "daily": "Daily Digest",
       "weekly": "Weekly Digest",
       "never": "Never",
-      "quietHoursEnabled": "Quiet Hours Enabled",
       "quietHoursDisabled": "Quiet Hours Disabled",
       "quietStart": "Quiet Hours Start",
       "quietEnd": "Quiet Hours End",
@@ -1420,30 +1801,6 @@
       "typePlaceholder": "Select template type",
       "descriptionPlaceholder": "Enter template description",
       "contentPlaceholder": "Enter template content"
-    }
-  },
-  "chat": {
-    "conversations": "Conversations",
-    "newConversation": "New",
-    "searchConversations": "Search conversations...",
-    "noMessages": "No messages yet",
-    "justNow": "Just now",
-    "yesterday": "Yesterday",
-    "noConversationsFound": "No conversations found",
-    "noConversations": "No conversations yet",
-    "members": "members",
-    "online": "online",
-    "deleteConfirmTitle": "Delete Conversation",
-    "deleteConfirmContent": "Are you sure you want to delete this conversation? This action cannot be undone.",
-    "deleteSuccess": "Conversation deleted successfully",
-    "deleteError": "Failed to delete conversation",
-    "message": {
-      "delete": "Delete message",
-      "addReaction": "Add reaction",
-      "deleteConfirmTitle": "Delete Message",
-      "deleteConfirmContent": "Are you sure you want to delete this message? This action cannot be undone.",
-      "deleteSuccess": "Message deleted successfully",
-      "deleteError": "Failed to delete message"
     }
   }
 } 
