--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1135,7 +1135,70 @@
     "delayed": "Delayed"
   },
   "calendar": {
-    "title": "Calendar"
+    "title": "Calendar Events",
+    "createEvent": "Create Event",
+    "editEvent": "Edit Event",
+    "update": "Update",
+    "create": "Create",
+    "cancel": "Cancel",
+    "delete": "Delete",
+    "edit": "Edit",
+    "confirmDelete": "Are you sure you want to delete this event?",
+    "loading": "Loading events...",
+    "noEvents": "No events found. Create your first event!",
+    "search": "Search events...",
+    "clearFilters": "Clear Filters",
+    "title": "Title",
+    "titleRequired": "Please enter a title",
+    "titlePlaceholder": "Enter event title",
+    "description": "Description",
+    "descriptionPlaceholder": "Enter event description",
+    "startTime": "Start Time",
+    "startTimeRequired": "Please select start time",
+    "startTimePlaceholder": "Select start time",
+    "endTime": "End Time",
+    "endTimeRequired": "Please select end time",
+    "endTimePlaceholder": "Select end time",
+    "type": "Type",
+    "typeRequired": "Please select event type",
+    "typePlaceholder": "Select event type",
+    "status": "Status",
+    "statusRequired": "Please select status",
+    "statusPlaceholder": "Select status",
+    "location": "Location",
+    "locationPlaceholder": "Enter location",
+    "allDay": "All Day Event",
+    "recurring": "Recurring Event",
+    "recurrencePattern": "Recurrence Pattern",
+    "color": "Color",
+    "eventType": {
+      "meeting": "Meeting",
+      "task": "Task",
+      "reminder": "Reminder",
+      "other": "Other"
+    },
+    "status": {
+      "scheduled": "Scheduled",
+      "ongoing": "Ongoing",
+      "cancelled": "Cancelled",
+      "completed": "Completed"
+    },
+    "replies": "replies",
+    "reply": "Reply",
+    "addReply": "Add a reply...",
+    "send": "Send",
+    "replyingTo": "Replying to a comment",
+    "loading": "Loading replies...",
+    "noReplies": "No replies yet",
+    "replySent": "Reply sent successfully",
+    "replyError": "Failed to send reply",
+    "replyUpdated": "Reply updated successfully",
+    "replyUpdateError": "Failed to update reply",
+    "replyDeleted": "Reply deleted successfully",
+    "replyDeleteError": "Failed to delete reply",
+    "eventCreated": "Event created successfully",
+    "eventUpdated": "Event updated successfully",
+    "formError": "Please check your input and try again"
   },
   "guest": {
     "management": {
