--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -748,9 +748,71 @@
     "linkPlaceholder": "Nhập link cuộc họp (tùy chọn)"
   },
   "calendar": {
-    "title": "Lịch",
-    "description": "Quản lý sự kiện, cuộc họp và ngày quan trọng",
+    "title": "Sự kiện lịch",
     "createEvent": "Tạo sự kiện",
+    "editEvent": "Chỉnh sửa sự kiện",
+    "update": "Cập nhật",
+    "create": "Tạo",
+    "cancel": "Hủy",
+    "delete": "Xóa",
+    "edit": "Chỉnh sửa",
+    "confirmDelete": "Bạn có chắc muốn xóa sự kiện này?",
+    "loading": "Đang tải sự kiện...",
+    "noEvents": "Không tìm thấy sự kiện. Tạo sự kiện đầu tiên của bạn!",
+    "search": "Tìm kiếm sự kiện...",
+    "clearFilters": "Xóa bộ lọc",
+    "title": "Tiêu đề",
+    "titleRequired": "Vui lòng nhập tiêu đề",
+    "titlePlaceholder": "Nhập tiêu đề sự kiện",
+    "description": "Mô tả",
+    "descriptionPlaceholder": "Nhập mô tả sự kiện",
+    "startTime": "Thời gian bắt đầu",
+    "startTimeRequired": "Vui lòng chọn thời gian bắt đầu",
+    "startTimePlaceholder": "Chọn thời gian bắt đầu",
+    "endTime": "Thời gian kết thúc",
+    "endTimeRequired": "Vui lòng chọn thời gian kết thúc",
+    "endTimePlaceholder": "Chọn thời gian kết thúc",
+    "type": "Loại",
+    "typeRequired": "Vui lòng chọn loại sự kiện",
+    "typePlaceholder": "Chọn loại sự kiện",
+    "status": "Trạng thái",
+    "statusRequired": "Vui lòng chọn trạng thái",
+    "statusPlaceholder": "Chọn trạng thái",
+    "location": "Địa điểm",
+    "locationPlaceholder": "Nhập địa điểm",
+    "allDay": "Sự kiện cả ngày",
+    "recurring": "Sự kiện lặp lại",
+    "recurrencePattern": "Mẫu lặp lại",
+    "color": "Màu sắc",
+    "eventType": {
+      "meeting": "Cuộc họp",
+      "task": "Công việc",
+      "reminder": "Nhắc nhở",
+      "other": "Khác"
+    },
+    "status": {
+      "scheduled": "Đã lên lịch",
+      "ongoing": "Đang diễn ra",
+      "cancelled": "Đã hủy",
+      "completed": "Hoàn thành"
+    },
+    "replies": "trả lời",
+    "reply": "Trả lời",
+    "addReply": "Thêm trả lời...",
+    "send": "Gửi",
+    "replyingTo": "Đang trả lời bình luận",
+    "loading": "Đang tải trả lời...",
+    "noReplies": "Chưa có trả lời nào",
+    "replySent": "Gửi trả lời thành công",
+    "replyError": "Gửi trả lời thất bại",
+    "replyUpdated": "Cập nhật trả lời thành công",
+    "replyUpdateError": "Cập nhật trả lời thất bại",
+    "replyDeleted": "Xóa trả lời thành công",
+    "replyDeleteError": "Xóa trả lời thất bại",
+    "eventCreated": "Tạo sự kiện thành công",
+    "eventUpdated": "Cập nhật sự kiện thành công",
+    "formError": "Vui lòng kiểm tra thông tin và thử lại",
+    "description": "Quản lý sự kiện, cuộc họp và ngày quan trọng",
     "stats": {
       "totalEvents": "Tổng sự kiện",
       "upcomingEvents": "Sự kiện sắp tới",
